--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@
 Thumbs.db
 Desktop.ini
 ~$*
+~*
 *.b#?
 *.s#?
 archive_junk/mk4/sw63_mk4_displaytestboard/sw63_mk4_displaytestboard-backups
+pcb/sw63_mk4_v1/jlcpcb/gerber
