--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ Desktop.ini
 *.s#?
 archive_junk/mk4/sw63_mk4_displaytestboard/sw63_mk4_displaytestboard-backups
 pcb/sw63_mk4_v1/jlcpcb/gerber
+pcb/sw63_mk4_v1/sw63_mk4_v1-backups
