--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "code/lib/stm32l0xx-hal-driver"]
 	path = code/lib/stm32l0xx-hal-driver
 	url = https://github.com/STMicroelectronics/stm32l0xx-hal-driver.git
+[submodule "code/lib/uf2"]
+	path = code/lib/uf2
+	url = https://github.com/microsoft/uf2.git
